--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-stylus": "^2.0.6",
     "gulp-uglify": "^1.2.0",
-    "gulp-watch": "^4.3.4"
+    "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.3.4",
+    "jeet": "^6.1.2",
+    "rupture": "^0.6.1",
+    "yargs": "^3.17.1"
   }
 }
